feat: added long pull to sdk (#17)
* feat: added long pull to sdk :)

* fix: add 1-99 check (server doesn't accept these)

* fix: clarified error

* between -> be
